ubuntu/22.04/p/py/python3.10-dbg/3.10.4-3ubuntu0.1/92a8204a-23af-4a56-9337-c3954d490dda/_usr_bin_python3.10d.strace.stderr
  File "<stdin>", line 1
    /usr/bin/python3.10d
                      ^
SyntaxError: invalid decimal literal
